testing for emily

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="./assets/css/output.css" rel="stylesheet">
+    
+    <!-- you need to run this in order to activate tailwindcss -->
     <!-- npx tailwindcss -i ./public/assets/css/input.css -o ./public/assets/css/output.css --watch -->
 </head>
 
