--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StudentLink</title>
-    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="./assets/css/output.css" rel="stylesheet">
     
@@ -14,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="bg-cyan-400">
+    <nav class="header-bg">
         <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
             <div class="relative flex h-16 items-center justify-between">
                 <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
