--- a/public/register.html
+++ b/public/register.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StudentLink</title>
+    <title>StudentLink Register</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="./assets/css/output.css" rel="stylesheet">
-    
-    <!-- you need to run this in order to activate tailwindcss -->
-    <!-- npx tailwindcss -i ./public/assets/css/input.css -o ./public/assets/css/output.css --watch -->
 </head>
-
 <body>
     <nav class="header-bg">
         <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
@@ -51,7 +46,7 @@
                     <div class="hidden sm:ml-6 sm:block">
                         <div class="flex space-x-4">
                             <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-                            <a href="login.html" class="hover:bg-gray-200 bg-gray-900  text-white rounded-md px-3 py-2 text-sm font-medium"
+                            <a href="#" class="hover:bg-gray-200 bg-gray-900  text-white rounded-md px-3 py-2 text-sm font-medium"
                                 aria-current="page">Register</a>
                             <a href="#"
                                 class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Login</a>
@@ -65,9 +60,9 @@
         <div class="sm:hidden" id="mobile-menu">
             <div class="space-y-1 px-2 pb-3 pt-2">
                 <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-                <a href="register.html" class="bg-gray-900 text-white block rounded-md px-3 py-2 text-base font-medium"
+                <a href="#" class="bg-gray-900 text-white block rounded-md px-3 py-2 text-base font-medium"
                     aria-current="page">Register</a>
-                <a href="login.html"
+                <a href="#"
                     class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Login</a>
             </div>
         </div>
@@ -118,8 +113,5 @@
 
 
     </div>
-
-
 </body>
-
 </html>
